--- a/templates/home.htm
+++ b/templates/home.htm
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-
+    {% include 'nav.htm' %}
     <div class="container">  
       <h1 class="text-center mt-2 mb-4">{{company_name}} Site</h1>
       <img id="banner" class="img-fluid" src="https://img.freepik.com/free-psd/digital-marketing-facebook-banner-template_237398-233.jpg?w=1380&t=st=1709369627~exp=1709370227~hmac=c3c52b3bbb900a220b9c5b5627e8f82d6e9a223c9314631805befc1fa5b54b8b">
