--- a/templates/home.htm
+++ b/templates/home.htm
@@ -38,5 +38,6 @@
       <button class="btn btn-primary btn-lg">Contact Us</button>
       <p class="mt-4">Copyright 2022, Alaa</p>
       </div>
+       {% include 'footer.htm' %}
   </body>
 </html>
