--- a/templates/home.htm
+++ b/templates/home.htm
@@ -36,7 +36,7 @@
       </p>
       <div class="text-center">  
       <button class="btn btn-primary btn-lg">Contact Us</button>
-      <p class="mt-4">Copyright 2022, Alaa</p>
+      <p class="mt-4">Copyright 2022, Alaa1</p>
       </div>
        {% include 'footer.htm' %}
   </body>
